# relay-teams

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.agent-runtime  MANIFEST.in  README.md  eval-swebench-10.yaml  eval-swebench.yaml  pyproject.toml  qodana-global-configurations.yaml  qodana.yaml  setup.bat  setup.py  setup.sh
.agent_teams/: .env.example  logger.ini  mcp.json
.agent_teams/evals/configs/: eval-swebench-10.yaml  eval-swebench-100.yaml  eval-swebench-full.yaml  eval-swebench.yaml
.agent_teams/evals/datasets/: swebench-verified-1.jsonl  swebench-verified-10.jsonl
.agent_teams/roles/: coordinator.md  coordinator_agent.md  crafter.md  designer.md  explorer.md  gater.md  spec_coder.md  spec_design.md  spec_spec.md  spec_verify.md  time.md
.agent_teams/workflows/: sdd.md
.github/: CODEOWNERS
.github/workflows/: benchmarks-micro.yml  benchmarks-spec-compliance.yml  benchmarks-swebench.yml  benchmarks-terminalbench.yml  code_quality.yml  pr-checks.yml  prune-stale-branches.yml  qodana-config-upload.yml  release.yml
agent_teams_evals/: README.md  config.py  conftest.py  models.py  reporter.py  run.py  run_config.py  runner.py
agent_teams_evals/backends/: __init__.py  agent_teams.py  base.py
agent_teams_evals/jsonl/: eval_custom.py
agent_teams_evals/loaders/: base.py  swebench_loader.py
agent_teams_evals/scorers/: base.py  event_status_scorer.py  keyword_scorer.py  regex_scorer.py  swebench_docker_scorer.py  swebench_scorer.py
agent_teams_evals/swebench/: eval_lite.py
agent_teams_evals/swebench_evals/: eval_lite.py
agent_teams_evals/workspace/: base.py  docker_setup.py  git_setup.py  patch_extractor.py
benchmarks/: extreme_session_pressure.py  session_switch_after_send_pressure.py
benchmarks/micro/: conftest.py  test_micro_graph_topology.py  test_micro_memory_search.py  test_micro_role_creation.py  test_micro_task_creation.py  test_micro_verification.py  test_micro_wakeup_queue.py
benchmarks/spec_compliance/: checks.py  models.py  runner.py
benchmarks/swebench/: config.py  reporter.py  runner.py
docker/: Dockerfile.agent-runtime  eval-entrypoint.sh  prepare_runtime_pyproject.py
docs/: README.md  agent-memory-ppt-iteration.md  ao1-implementation-report.md  api-design.md  claudecode-opencode-relay-teams-capability-gap.md  clawhub-skill-installation-lessons.md  codeagent-provider-design.md  codex-background-process-ps-analysis.md  codex-cli-background-terminals-analysis.md  codex-rust-analysis-report.md  commands.md  computer-use-real-smoke.md  database-schema.md  external-acp-agents-design.md  feishu-integration.md  gateway-acp-design.md  llm-concurrency-incident-2026-04-28.md  logger-desensitize-design.md  logging-traceability-plan.md  maas-provider-design.md  metrics-platform-design.md  model-connectivity-retry-design.md  plugins-capability-design.md  ppt-layout-feedback-loop.md  relay-teams-runtime-hooks-design.md  role-memory-bm25-retrieval-design.md  role-state-space-recursive-communication.md  role-workspace-memory-design.md  runtime-injection-semantics.md  security.md  session-context-compaction-design.md  skill-routing-design.md  system-module-boundaries.md  system-prompt-layering.md  system-reminders-design.md  wechat-integration.md  workspace-multi-provider-design.md  xiaoluban-integration.md  zed-acp-usage.md  头脑风暴-2026-3-30.md  (+1 more)
docs/benchmarks/: README.md
docs/core/: api-design.md  database-schema.md  project-layout.md  system-module-boundaries.md
docs/design/: fe1-memory-bank.md
docs/evaluations/: README.md
docs/evaluations/swebench/: README.md  normal-swebench-verified-100-report.html  orchestration-swebench-verified-100-report.html
docs/evaluations/terminalbench/: README.md
docs/features/: lessons-learned-2026.md
docs/features/lessons-learned/: cross-reference-analysis.md  feature-reference-data.md  markdown-research-points.md
docs/frontend/: README.md  api-and-events.md  architecture.md  features.md  pages-and-layout.md  testing-and-maintenance.md
docs/integrations/: clawhub-plugins.md  discord-integration.md  feishu-integration.md  wechat-integration.md  xiaoluban-integration.md
docs/modules/agent-runtimes/: README.md  architecture.md  implementation-plan.md  testing.md
docs/modules/agents/: README.md  delegation-planner-dynamic-dag-spec.md  formal-task-spec-lifecycle.md  issue-759-delegation-planner.md  orchestration-policy-design.md  role-state-space-recursive-communication.md  sg2-role-behavior-boundaries-spec.md  sp2-role-contracts-spec.md  verification-evidence-semantic-spec.md
docs/modules/automation/: ao4-async-path-unification.md  automation-scheduling-spec.md
docs/modules/boards/: workspace-todo-board-agent-handoff.md  workspace-todo-board-collaboration-design.md  workspace-todo-board-design.md  (+5 more)
docs/operations/: computer-use-real-smoke.md  logging-traceability-plan.md
docs/reflection/: reflection-api-design.md  reflection-database-schema.md  subagent-reflection-memory-design.md
docs/research/: lessons-learned-2026.md
roles/: coordinator_agent.md  generalist.md
scripts/: download_swebench.py  verify_claude_marketplace_plugins.py
src/agent_teams/: __init__.py  __main__.py
src/agent_teams_evals/: README.md  checkpoint.py  models.py  reporter.py  run.py  run_config.py  runner.py
src/datasets/: __init__.pyi
src/docker/: __init__.pyi
src/relay_teams/: __init__.py  __main__.py  _version.py  runtime_env.py
src/relay_teams_evals/: README.md  checkpoint.py  models.py  reporter.py  run.py  run_config.py  runner.py
tests/: conftest.py  test_coordinator_tools.py  test_hello.py  test_llm_tool_events.py  test_module_plan_parser.py  test_session_rounds_paging.py  test_session_rounds_pending_approvals.py  test_tool_helpers.py  test_tool_policy.py  test_tool_registry.py
tests/application/: test_rounds_projection_role_instance_map.py  test_run_manager_stop_semantics.py
tests/integration_tests/: conftest.py
tests/tools/: test_ripgrep.py
tests/unit_tests/: conftest.py  test_async_wrapper_coverage.py  test_module_boundaries.py  test_repository_async_paths.py
(+2365 files in other folders)
