[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-teams"
dynamic = ["version"]
description = "Role-driven multi-agent framework with strong typing and tool-based collaboration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-ai",
  "pydantic-ai-slim[fastmcp]",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "httpx>=0.27.0",
  "json-repair>=0.58.7",
  "lark-oapi==1.5.3",
  "discord.py>=2.4.0,<3",
  "markitdown[pdf,docx,pptx,xlsx]>=0.1.5,<0.2",
  "markdownify>=1.2.0",
  "defusedxml>=0.7.1",
  "qrcode>=8.0",
  "pywinpty>=3.0.3; platform_system == 'Windows'",
  "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-timeout >= 2.1.0",
  "pytest-asyncio >= 1.2.0",
  "pytest-benchmark>=5.1.0",
  "coverage >= 7.8.0",
  "diff-cover>=9.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "playwright>=1.49.0",
  "pre-commit >= 4.5.0",
  "ruff>=0.9.10",
  "setuptools>=68",
  "basedpyright>=1.36.2",
  "pyright>=1.1.408",
  "bandit>=1.8.0",
  "xenon>=0.9.3",
]

[project.scripts]
relay-teams = "relay_teams.interfaces.cli.app:main"
relay-teams-evals = "relay_teams_evals.run:app"

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
testpaths = ["tests/unit_tests", "tests/integration_tests"]
pythonpath = ["src", "tests", "."]
markers = [
  "timeout: override per-test timeout budget",
  "benchmark: performance benchmark tests (use --benchmark-only to run)",
]
filterwarnings = [
  'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated.*:DeprecationWarning:lark_oapi\.ws\.pb\.google\.protobuf\.internal\.well_known_types',
  'ignore:There is no current event loop:DeprecationWarning:lark_oapi\.ws\.client',
  'ignore:websockets\.InvalidStatusCode is deprecated:DeprecationWarning:lark_oapi\.ws\.client',
  'ignore:websockets\.legacy is deprecated.*:DeprecationWarning:websockets\.legacy',
]

[tool.coverage.run]
source = [
  "src/relay_teams",
  "src/relay_teams_evals",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true

[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 90
include = [
  "src/relay_teams/**/*.py",
  "src/relay_teams_evals/**/*.py",
]
show_uncovered = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "relay_teams._version.__version__" }

[tool.setuptools.package-data]
"relay_teams.builtin" = [
  "config/*.json",
  "logging/*.ini",
  "roles/*.md",
  "skills/**/*",
]
"relay_teams.tools" = ["*/*.txt"]

[dependency-groups]
evals = [
  "chardet<6",
  "swebench>=4.0.0",
  "docker>=7.0.0",
  "datasets>=2.14.0",
]

[tool.uv]
default-groups = ["evals"]

[tool.pyright]
extraPaths = ["src", "tests"]
typeCheckingMode = "standard"
exclude = [
  ".venv",
  ".claude",
  "**/__pycache__",
  "**/node_modules",
  "frontend/dist",
  ".tmp",
  "src/relay_teams/builtin/skills/pptx-craft/scripts/svg_to_pptx",
]

[tool.ruff]
extend-exclude = ["src/relay_teams/builtin/skills/pptx-craft/scripts/svg_to_pptx"]

[tool.bandit]
exclude_dirs = ["tests"]
# B608 false positives: all findings are parameterized queries with dynamic `?`
# placeholder counts via f-strings. Values are never interpolated into SQL.
# Inline `# nosec B608` annotations are applied where syntactically possible;
# multiline f-string literals (f"""...""") cannot contain Python comments, so
# the remaining findings are suppressed here.
# B314 false positives: XML parsing in bundled skill scripts (pptx-craft SVG
# processing) that only parse trusted local SVG content. Applying inline
# `# nosec` to those files triggers pre-existing spec-compliance violations
# (missing `from __future__ import annotations`, `@dataclass` usage) in the
# CI changed-files check, so they are suppressed globally instead.
skips = ["B608", "B314"]
